@@ -350,6 +350,9 @@ Extension Modules
 Library
 -------
 
+- bpo-30418: On Windows, subprocess.Popen.communicate() now also ignore EINVAL
+  on stdin.write() if the child process is still running but closed the pipe.
+
 - bpo-30463: Addded empty __slots__ to abc.ABC.  This allows subclassers
   to deny __dict__ and __weakref__ creation.  Patch by Aaron Hall.
 
